--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@ethersproject/bytes": "^5.0.0",
     "@ethersproject/providers": "^5.0.0",
     "ethers": "^5.1.3",
-    "typechain": "workspace:^8.1.0",
+    "typechain": "^8.1.0",
     "typescript": ">=4.3.0",
     "@tanstack/react-query": "^4.2.3",
     "wagmi": "^0.6.4"
@@ -50,7 +50,7 @@
     "@types/lodash": "^4.14.139",
     "ethers": "^5.1.3",
     "test-utils": "1.0.0",
-    "typechain": "workspace:^8.1.0",
+    "typechain": "^8.1.0",
     "typescript": ">=4.3.0",
     "@types/proxyquire": "^1.3.28",
     "proxyquire": "^2.1.3"
