--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "TypeScript",
     "Thesoftaxis"
   ],
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "MIT",
   "repository": "https://github.com/TheSoftAxis/typechain-target-tanstack-react-query-wagmi",
   "main": "./dist/index.js",
@@ -40,8 +40,8 @@
     "ethers": "^5.1.3",
     "typechain": "^8.1.0",
     "typescript": ">=4.3.0",
-    "@tanstack/react-query": "^4.2.3",
-    "wagmi": "^0.6.4"
+    "@tanstack/react-query": ">=4.2.3",
+    "wagmi": ">=0.6.4"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.0.0",
